# GEOSAQcGAN

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  cmake_it_prism  components.yaml
src/: CMakeLists.txt
src/Shared/: CMakeLists.txt
src/Shared/JHU_Shared/: .gitignore  CMakeLists.txt
src/geosaqcgan/: CMakeLists.txt  geos_dataset.py  geosaqcgantrainer.py  preprocess_geos_cf.py  read_geos_cf_datafiles.py
src/geosaqcgan/configs/: geos_cf_collections.yaml  geos_cf_preproc_collections.yaml
src/geosaqcgan/inference/: create_predictions.py
src/geosaqcgan/scripts/: preprocess_geos_cf.py  read_geos_cf_datafiles.py
src/geosaqcgan/shared/: aqcgan_utils.py  gen_utils.py
src/tests/: CMakeLists.txt  run_setup.py
src/tests/forecast/: CMakeLists.txt  forecast_run.j  forecast_run_discover.j  forecast_run_prism.j  forecast_setup.py  geos_cf_perturb_met_and_emis_gcc_feb_sep_surface_only_time_8ts_nolstm_nolatlon_none_train_7_28_12_17_29_3_1_25_20_19_24_23_22_15_8_26_21_5_9.yaml  norm_stats.pkl  run_fc.sh
src/tests/validate/: CMakeLists.txt  geos_cf_perturb_met_and_emis_gcc_feb_sep_surface_only_time_8ts_nolstm_nolatlon_none_train_7_28_12_17_29_3_1_25_20_19_24_23_22_15_8_26_21_5_9.yaml  meta.pkl  run_val.sh  train_metrics.pkl  val_metrics.pkl  validation_run_discover.j  validation_run_prism.j
